baml_language/crates/baml_tests/snapshots/diagnostic_errors/generic_call_ambiguity/baml_tests__diagnostic_errors__generic_call_ambiguity__01_lexer__array_compare.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Intent"
Colon ":"
Word "an"
Word "array"
Word "of"
Word "two"
Word "comparisons"
Colon ":"
Backtick "`"
LBracket "["
Word "a"
Less "<"
Word "b"
Comma ","
Word "c"
Greater ">"
Word "d"
RBracket "]"
Backtick "`"
Dot "."
Slash "/"
Slash "/"
Word "With"
Word "identifier"
Word "operands"
Comma ","
Word "the"
Word "tokens"
Backtick "`"
Word "a"
Less "<"
Word "b"
Comma ","
Word "c"
Greater ">"
Word "d"
Backtick "`"
Word "collide"
Word "with"
Word "the"
Slash "/"
Slash "/"
Word "generic-call"
Word "heuristic"
In "in"
Word "parser"
Dot "."
Word "rs"
Colon ":"
IntegerLiteral "3914"
LParen "("
Backtick "`"
Word "looks_like_generic_args"
Backtick "`"
RParen ")"
Colon ":"
Slash "/"
Slash "/"
Word "seeing"
Backtick "`"
Less "<"
Backtick "`"
Word "followed"
Word "by"
Word "Word"
Word "then"
Backtick "`"
Comma ","
Backtick "`"
Word "commits"
Word "to"
Word "parsing"
Backtick "`"
Word "a"
Less "<"
Word "b"
Comma ","
Word "c"
Greater ">"
Backtick "`"
Word "as"
Word "a"
Slash "/"
Slash "/"
Word "path"
Word "with"
Word "generic"
Word "args"
Comma ","
Word "leaving"
Backtick "`"
Word "d"
Backtick "`"
Word "dangling"
Word "inside"
Word "the"
Word "array"
Dot "."
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Word "Documenting"
Word "the"
Word "parser"
Word "behavior"
Error "—"
Word "the"
Word "user-facing"
Word "workaround"
Is "is"
Word "to"
Slash "/"
Slash "/"
Word "parenthesize"
Word "the"
Word "comparisons"
LParen "("
Backtick "`"
LBracket "["
LParen "("
Word "a"
Less "<"
Word "b"
RParen ")"
Comma ","
LParen "("
Word "c"
Greater ">"
Word "d"
RParen ")"
RBracket "]"
Backtick "`"
RParen ")"
Comma ","
Word "which"
Word "we"
Word "also"
Slash "/"
Slash "/"
Word "include"
Word "here"
Word "as"
Word "a"
Word "sanity"
Word "check"
Word "that"
Word "the"
Word "unambiguous"
Word "form"
Word "still"
Word "parses"
Dot "."
Function "function"
Word "ArrayOfComparisons"
LParen "("
Word "a"
Colon ":"
Word "int"
Comma ","
Word "b"
Colon ":"
Word "int"
Comma ","
Word "c"
Colon ":"
Word "int"
Comma ","
Word "d"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "bool"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
Word "a"
Less "<"
Word "b"
Comma ","
Word "c"
Greater ">"
Word "d"
RBracket "]"
RBrace "}"
Function "function"
Word "ArrayOfComparisonsParenthesized"
LParen "("
Word "a"
Colon ":"
Word "int"
Comma ","
Word "b"
Colon ":"
Word "int"
Comma ","
Word "c"
Colon ":"
Word "int"
Comma ","
Word "d"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "bool"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
LParen "("
Word "a"
Less "<"
Word "b"
RParen ")"
Comma ","
LParen "("
Word "c"
Greater ">"
Word "d"
RParen ")"
RBracket "]"
RBrace "}"
Slash "/"
Slash "/"
Word "Mixed"
Colon ":"
Word "comparison"
Word "followed"
Word "by"
Word "a"
Word "real"
Function "function"
Word "call"
Word "inside"
Word "an"
Word "array"
Dot "."
Slash "/"
Slash "/"
Backtick "`"
LBracket "["
Word "f"
Less "<"
Word "x"
Comma ","
Word "y"
LParen "("
RParen ")"
RBracket "]"
Backtick "`"
Word "should"
Word "parse"
Word "as"
Word "two"
Word "elements"
Colon ":"
Backtick "`"
Word "f"
Less "<"
Word "x"
Backtick "`"
LParen "("
Word "comparison"
RParen ")"
Word "and"
Slash "/"
Slash "/"
Backtick "`"
Word "y"
LParen "("
RParen ")"
Backtick "`"
LParen "("
Word "call"
RParen ")"
Dot "."
Word "The"
Backtick "`"
Less "<"
Backtick "`"
Word "looks"
Word "generic-y"
Word "but"
Word "the"
Backtick "`"
LParen "("
Backtick "`"
Word "after"
Backtick "`"
Word "y"
Backtick "`"
Is "is"
Word "inside"
Slash "/"
Slash "/"
Word "the"
Word "angle"
Word "scan"
Comma ","
Word "so"
Word "the"
Word "heuristic"
Word "falls"
Word "back"
Word "to"
Word "comparison"
Dot "."
Function "function"
Word "ArrayCompareThenCall"
LParen "("
Word "f"
Colon ":"
Word "int"
Comma ","
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
Word "f"
Less "<"
Word "x"
Comma ","
Word "y"
LParen "("
RParen ")"
RBracket "]"
RBrace "}"
Function "function"
Word "y"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "0"
RBrace "}"
