baml_language/crates/baml_tests/snapshots/diagnostic_errors/generic_call_ambiguity/baml_tests__diagnostic_errors__generic_call_ambiguity__01_lexer__generic_call.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Intent"
Colon ":"
Word "a"
Word "generic"
Word "call"
Word "inside"
Word "an"
Word "array"
Word "literal"
Colon ":"
Backtick "`"
LBracket "["
Word "f"
Less "<"
Word "K"
Comma ","
Word "V"
Greater ">"
LParen "("
DotDotDot "..."
RParen ")"
RBracket "]"
Backtick "`"
Dot "."
Slash "/"
Slash "/"
Backtick "`"
Greater ">"
Backtick "`"
Is "is"
Word "followed"
Word "directly"
Word "by"
Backtick "`"
LParen "("
Backtick "`"
Comma ","
Word "the"
Word "truly"
Word "ambiguous"
Word "shape"
Error "—"
Word "at"
Word "the"
Word "token"
Slash "/"
Slash "/"
Word "level"
Backtick "`"
Word "f"
Less "<"
Word "K"
Comma ","
Word "V"
Greater ">"
LParen "("
DotDotDot "..."
RParen ")"
Backtick "`"
Word "could"
Word "read"
Word "as"
Word "either"
Colon ":"
Slash "/"
Slash "/"
Minus "-"
Word "a"
Word "generic"
Word "call"
Backtick "`"
Word "f"
Less "<"
Word "K"
Comma ","
Word "V"
Greater ">"
LParen "("
DotDotDot "..."
RParen ")"
Backtick "`"
Comma ","
Word "or"
Slash "/"
Slash "/"
Minus "-"
Word "two"
Word "comparisons"
Backtick "`"
Word "f"
Less "<"
Word "K"
Comma ","
Word "V"
Greater ">"
LParen "("
DotDotDot "..."
RParen ")"
Backtick "`"
LParen "("
Word "Baml"
Word "has"
Word "no"
Word "tuples"
Comma ","
Word "but"
Word "the"
Slash "/"
Slash "/"
Word "parser"
Word "would"
Word "have"
Word "to"
Word "look"
Word "further"
Word "to"
Word "know"
Word "that"
RParen ")"
Dot "."
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Word "The"
Word "parser"
Error "'"
Word "s"
Backtick "`"
Word "looks_like_generic_args"
Backtick "`"
Word "heuristic"
LParen "("
Word "parser"
Dot "."
Word "rs"
Colon ":"
IntegerLiteral "3914"
RParen ")"
Word "commits"
Slash "/"
Slash "/"
Word "to"
Word "generics"
Word "on"
Backtick "`"
Less "<"
Backtick "`"
Word "Word"
Backtick "`"
Comma ","
Backtick "`"
Slash "/"
Backtick "`"
Greater ">"
Backtick "`"
Slash "/"
Backtick "`"
Less "<"
Backtick "`"
Comma ","
Word "so"
Word "it"
Word "picks"
Word "the"
Word "call"
Word "interpretation"
Dot "."
Function "function"
Word "f"
Less "<"
Word "K"
Comma ","
Word "V"
Greater ">"
LParen "("
Word "k"
Colon ":"
Word "K"
Comma ","
Word "v"
Colon ":"
Word "V"
RParen ")"
Arrow "->"
Word "V"
LBrace "{"
Word "v"
RBrace "}"
Function "function"
Word "GenericCallInArray"
LParen "("
Word "k"
Colon ":"
Word "int"
Comma ","
Word "v"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
Word "f"
Less "<"
Word "int"
Comma ","
Word "string"
Greater ">"
LParen "("
Word "k"
Comma ","
Word "v"
RParen ")"
RBracket "]"
RBrace "}"
Slash "/"
Slash "/"
Word "Generic"
Word "args"
Word "can"
Word "also"
Word "start"
Word "with"
Word "non-Word"
Word "tokens"
Error "—"
Word "string-literal"
Word "types"
Slash "/"
Slash "/"
Word "and"
Word "parenthesized"
Word "union"
Word "types"
Dot "."
Word "These"
Word "previously"
Word "fell"
Word "back"
Word "to"
Word "comparison"
Slash "/"
Slash "/"
Word "because"
Word "the"
Word "lookahead"
Word "allowlist"
Word "only"
Word "covered"
Word "Word"
Slash "/"
Word "Dot"
Slash "/"
Word "etc"
Dot "."
Function "function"
Word "literal_arg"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "f"
Less "<"
Quote "\""
Word "assistant"
Quote "\""
Comma ","
Word "string"
Greater ">"
LParen "("
Quote "\""
Word "a"
Quote "\""
Comma ","
Quote "\""
Word "b"
Quote "\""
RParen ")"
RBrace "}"
Function "function"
Word "paren_union_arg"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "f"
Less "<"
LParen "("
Word "int"
Pipe "|"
Word "string"
RParen ")"
Comma ","
Word "string"
Greater ">"
LParen "("
IntegerLiteral "0"
Comma ","
Quote "\""
Word "b"
Quote "\""
RParen ")"
RBrace "}"
